--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ yarn-debug.log*
 /helpers/*
 !/application_helper.rb
 
-comments.scss
+/app/assets/stylesheets/likes.scss
 likes.scss
 pages.scss
 posts.scss
